port: migrate to Minecraft 26.2
Version bumps (gradle.properties, fabric.mod.json, neoforge.mods.toml,
build.gradle, CI workflow) and adaptation to 26.2 API breakages:

- Minecraft#setScreen(Screen) -> setScreenAndShow(Screen) (global rename)
- Minecraft#screen field removed -> Minecraft#gui.screen() (Gui refactor),
  including the one write site -> Minecraft#gui.setScreen(...)
- Minecraft#getToastManager() -> Minecraft#gui.toastManager()
- I18n.exists(String) removed -> Language.getInstance().has(String)
- net.minecraft.util.Tuple removed -> new api.common.util.Pair record
  (exposes getA/getB and getFirst/getSecond); swapped across all modules
- com.mojang.blaze3d.vertex.Tesselator removed; the single usage was dead
  code (consumers already commented out), so just removed the variable
- MultiBufferSource removal already handled in SpriteRenderer (dead code)
- GuiGraphicsExtractor$ScissorStack ctor -> ScreenRectangle arg
- Architectury 21 networking: migrate the Identifier + FriendlyByteBuf
  C2S/S2C packets to CustomPacketPayload + StreamCodec (new REIPackets),
  gating S2C payload type registration to Env.SERVER to avoid double
  registration on the client/integrated server
- neoforge: FluidStackHooksForge removed -> FluidStack.create(...)
- accessWidener: drop AbstractContainerScreen#draggingItem (removed in 26.2,
  unused)